--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,17 @@
+html {
+	height:100%;
+}
+
+body {
+	margin: 0;
+    padding: 0;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
 h1, h2 {
 	margin-bottom: 0px;
 }
