--- a/src/index.css
+++ b/src/index.css
@@ -1,67 +1,68 @@
 html {
-    height:100%;
+	height: 100%;
 }
 
 body {
-    margin: 0;
-    padding: 0;
-    height: 100%;
-    width: 100%;
-    justify-content: center;
+	margin: 0;
+	padding: 0;
+	height: 100%;
+	width: 100%;
+	justify-content: center;
 }
 
-h1, h2 {
-    margin-bottom: 0px;
+h1,
+h2 {
+	margin-bottom: 0px;
 }
 
 #verticalCenteringDiv {
-    display: flex;
-    flex-direction: column;
+	display: flex;
+	flex-direction: column;
 }
 
 #versionTag {
-    font-style: italic;
-    position: relative;
-    top: -5px;
-    left: 10px;
+	font-style: italic;
+	position: relative;
+	top: -5px;
+	left: 10px;
 }
 
 #welcomeBanner {
-    width: fit-content;
-    margin-left: auto;
-    margin-right: auto;
+	width: fit-content;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 #logoutButton {
-    width: 99%;
-    margin: auto;
+	width: 99%;
+	margin: auto;
 }
 
 #macAddressList {
-    list-style-type: none;
+	list-style-type: none;
 }
 
-#macAddressList>li {
-    display: flex;
-    justify-content: space-around;
+#macAddressList > li {
+	display: flex;
+	justify-content: space-around;
 }
 
-#macAddressList>li>button {
-    line-height: 85%;
+#macAddressList > li > button {
+	line-height: 85%;
 }
 
 .section {
-    margin: auto;
-    width: fit-content;
-    max-width: 80%;
-    display: flex;
-    flex-direction: column;
+	margin: auto;
+	width: fit-content;
+	max-width: 80%;
+	display: flex;
+	flex-direction: column;
 }
 
 .hidden {
-    display: none !important;
+	display: none !important;
 }
 
 .center-text {
-    text-align: center;
+	text-align: center;
 }
